kubernetes/test.yml
apiVersion: v1
kind: Pod
metadata:
  name: test
spec:
  restartPolicy: Never
  volumes:
  - name: shared
    emptyDir: {}
  containers:
  - name: secrets
    image: arecker/secretboi:latest
    imagePullPolicy: Always
    volumeMounts:
    - name: shared
      mountPath: /secretboi
  - name: dummy
    image: debian
    imagePullPolicy: Always
    command: [ "/bin/bash", "-c", "--" ]
    args: [ "while true; do sleep 5; echo \"Running...\"; done;" ]
    volumeMounts:
    - name: shared
      mountPath: /vault
