kubernetes/vault.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: vault-app
  labels:
    app: vault
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: vault
        service: vault
    spec:
      containers:
        - name: vault-app
          image: arecker/vault:latest
          imagePullPolicy: Always
          command: ["vault", "server", "-config=/vault/config/vault.hcl"]
          securityContext:
            runAsUser: 1001
          ports:
            - containerPort: 8200
          volumeMounts:
            - mountPath: /vault/file
              name: vault-data
      volumes:
        - name: vault-data
          nfs:
            server: archive.local
            path: /mnt/scratch/farm/vault
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  labels:
    app: vault
spec:
  ports:
  - port: 8200
    protocol: TCP
  selector:
    service: vault
