kubernetes/farm.yml
---
"apiVersion": "networking.k8s.io/v1beta1"
"kind": "Ingress"
"metadata":
  "name": "farm"
"spec":
  "rules":
  - "host": "hub.local"
    "http":
      "paths":
      - "backend":
          "serviceName": "hub"
          "servicePort": 80
  - "host": "vault.local"
    "http":
      "paths":
      - "backend":
          "serviceName": "vault"
          "servicePort": 8200
