kubernetes/ingress.yml
---
"apiVersion": "networking.k8s.io/v1beta1"
"kind": "Ingress"
"metadata":
  "labels":
    "build": "0"
  "name": "ingress"
"spec":
  "rules":
  - "host": "hub.local"
    "http":
      "paths":
      - "backend":
          "serviceName": "hub"
          "servicePort": 80
  - "host": "jenkins.local"
    "http":
      "paths":
      - "backend":
          "serviceName": "jenkins"
          "servicePort": 8080
  - "host": "vault.local"
    "http":
      "paths":
      - "backend":
          "serviceName": "vault"
          "servicePort": 8200
...
